--- a/client/public/index.html
+++ b/client/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+    <meta name="Description" content="Margometro" />
     <link rel="manifest" href="/manifest.json" />
     <link rel="icon" type="image/png" href="<%= BASE_URL %>favicon.png" />
     <link
